--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,3 @@
-/* 
-const initialItems = [
-  { id: 1, description: "Passports", quantity: 2, packed: false },
-  { id: 2, description: "Socks", quantity: 12, packed: false },
-];
-*/
-
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
 * {
@@ -101,8 +94,6 @@ input {
 .list ul {
   list-style: none;
   width: 80%;
-  overflow: scroll;
-
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1.2rem;
@@ -113,6 +104,7 @@ input {
 .list li {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 1.2rem;
 }
 
@@ -136,4 +128,9 @@ input[type="checkbox"] {
   text-align: center;
   font-weight: 700;
   padding: 3.2rem 0;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
 }
